Fix wrap this time

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -35,7 +35,7 @@ article {
 	position: relative;
 	margin:1%;
 	top:0;
-	width: 80%;
+	width: 60%;
 }
 img + article {
 	position: absolute;
